<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#117F2C">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/BonusScreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="411dp"
    android:layout_height="929dp"
    tools:context=".bonus_screen">

    <TextView
        android:id="@+id/textView"
        android:layout_width="192dp"
        android:layout_height="44dp"
        android:fontFamily="@font/montserrat_bold"
        android:shadowColor="#40FFFFFF"
        android:shadowDx="4"
        android:shadowDy="4"
        android:shadowRadius="1"
        android:text="@string/bonus_text"
        android:textColor="#FFF"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/black_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.241"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.476" />

    <ImageView
        android:id="@+id/imageViewMoney"
        android:layout_width="117dp"
        android:layout_height="130dp"
        app:layout_constraintBottom_toTopOf="@+id/white_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mao_com_grana" />

    <View
        android:id="@+id/black_view"
        android:layout_width="328dp"
        android:layout_height="420dp"
        android:background="@drawable/rounded_rectangle2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.635"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/white_view"
        app:layout_constraintVertical_bias="0.052" />

    <View
        android:id="@+id/white_view"
        android:layout_width="331dp"
        android:layout_height="415dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/rounded_rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.594" />

    <TextView
        android:id="@+id/textViewBonusInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_sans_semibold"
        android:text="@string/bonus_input_text"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/black_view"
        app:layout_constraintEnd_toEndOf="@+id/black_view"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/black_view"
        app:layout_constraintTop_toTopOf="@+id/black_view"
        app:layout_constraintVertical_bias="0.054" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="274dp"
        android:layout_height="36dp"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="#63A6A6A6"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/white_view"
        app:layout_constraintEnd_toEndOf="@+id/black_view"
        app:layout_constraintHorizontal_bias="0.074"
        app:layout_constraintStart_toStartOf="@+id/black_view"
        app:layout_constraintTop_toBottomOf="@+id/textViewBonusInput"
        app:layout_constraintVertical_bias="0.047">


    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="271dp"
        android:layout_height="50dp"
        android:layout_marginEnd="40dp"
        android:background="#00000000"
        android:fontFamily="@font/nunito_sans_semibold"
        android:gravity="center"
        android:hint="[...]"
        android:inputType="text"
        android:textColor="#211D1D"
        android:textColorHint="#63211D1D"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@+id/cardview"
        app:layout_constraintEnd_toEndOf="@+id/black_view"
        app:layout_constraintStart_toStartOf="@+id/black_view"
        app:layout_constraintTop_toTopOf="@+id/cardview" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="234dp"
        android:layout_height="104dp"
        android:layout_marginBottom="18dp"
        app:layout_constraintBottom_toTopOf="@+id/cardview4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/black_view"
        app:layout_constraintVertical_bias="0.446"
        app:srcCompat="@drawable/logo_mte" />

    <ImageButton
        android:id="@+id/imageViewChevron"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/home_option_text"
        app:layout_constraintBottom_toTopOf="@+id/white_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.206"
        app:srcCompat="@drawable/chevron_left" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview4"
        android:layout_width="425dp"
        android:layout_height="80dp"
        app:cardBackgroundColor="#02140A"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/imageView12"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="-5dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/navbar1_text"
        android:scaleType="centerCrop"
        android:src="@drawable/user_profile"
        app:layout_constraintBottom_toTopOf="@+id/textView15"
        app:layout_constraintStart_toStartOf="@+id/cardview4"
        app:layout_constraintTop_toTopOf="@+id/cardview4" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="15dp"
        android:text="@string/profile_text"
        android:textColor="#fff"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/cardview4"
        app:layout_constraintStart_toStartOf="@+id/cardview4" />

    <TextView
        android:id="@+id/textViewHistory"
        android:layout_width="67dp"
        android:layout_height="23dp"
        android:layout_marginBottom="10dp"
        android:text="@string/history_text"
        android:textSize="10sp"
        android:textColor="#fff"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/cardview4"
        app:layout_constraintEnd_toStartOf="@+id/imageView8"
        app:layout_constraintStart_toEndOf="@+id/textView15" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="-5dp"
        android:scaleType="centerCrop"
        android:src="@drawable/delete"
        app:layout_constraintBottom_toTopOf="@+id/textViewHistory"
        app:layout_constraintEnd_toStartOf="@+id/imageView8"
        app:layout_constraintStart_toEndOf="@+id/imageView12"
        app:layout_constraintTop_toTopOf="@+id/cardview4" />

    <TextView
        android:id="@+id/textViewmensagem"
        android:layout_width="67dp"
        android:layout_height="23dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/mensagem_text"
        android:textColor="#fff"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/cardview4"
        app:layout_constraintStart_toEndOf="@+id/imageView8" />


    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="-5dp"
        android:scaleType="centerCrop"
        android:src="@drawable/mail"
        app:layout_constraintBottom_toTopOf="@+id/textViewmensagem"
        app:layout_constraintStart_toEndOf="@+id/imageView8"
        app:layout_constraintTop_toTopOf="@+id/cardview4" />

    <TextView
        android:id="@+id/textViewconfig"
        android:layout_width="67dp"
        android:layout_height="23dp"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/config_text"
        android:textColor="#fff"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/cardview4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewmensagem" />

    <ImageButton
        android:id="@+id/imageView15"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="-5dp"
        android:scaleType="centerCrop"
        android:src="@drawable/settings"
        android:background="@android:color/transparent"
        android:contentDescription="@string/navbar2_text"
        app:layout_constraintBottom_toTopOf="@+id/textViewconfig"
        app:layout_constraintEnd_toEndOf="@+id/cardview4"
        app:layout_constraintStart_toEndOf="@+id/imageView14"
        app:layout_constraintTop_toTopOf="@+id/cardview4" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="93dp"
        android:layout_height="57dp"
        android:layout_marginTop="-5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/cardview4"
        app:layout_constraintTop_toTopOf="@+id/cardview4"
        app:srcCompat="@drawable/logo_mte_verde" />

</androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </HorizontalScrollView>

</ScrollView>