...

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/CollectNextScreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="411dp"
...
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/black_view"
                    app:layout_constraintVertical_bias="0.446"
                    app:srcCompat="@drawable/logo_mte" />

                <ImageButton
                    android:id="@+id/imageViewChevron"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/home_option_text"
                    app:layout_constraintBottom_toTopOf="@+id/white_view"
                    app:layout_constraintEnd_toEndOf="parent"
...
                    app:cardElevation="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <ImageButton
                    android:id="@+id/imageView12"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="-5dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/navbar1_text"
...
                    android:textSize="10sp"
                    app:layout_constraintBottom_toBottomOf="@+id/cardview4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textViewmensagem" />

                <ImageButton
                    android:id="@+id/imageView15"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginBottom="-5dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/settings"
...
